--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <!-- Navbar -->
-    <header>
-        <a href="#" class="logo">Bayɛlɛmabaga</a><!-- Navbar -->
+   <!-- <header>
+        <a href="#" class="logo">Bayɛlɛmabaga</a><!-- Navbar -->-->
         <header>
             <a href="#" class="logo">Bayɛlɛmabaga</a>
      
