--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
+    <title>Inscription</title>
     <!-- Link To CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Box Icons -->
@@ -14,19 +14,19 @@
 </head>
 <body>
     <!-- Navbar -->
-        <header>
-            <a href="#" class="logo">Bayɛlɛmabaga</a>
-     
-            <div class="bx bx-menu" id="menu-icon"></div>
-     
-            <ul class="navbar">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="Inscription.html">Créer un compte</a></li>
-                <li><a href="Se connecter.html">Se connecter</a></li>
-                <li><a href="#Contactez-nous">Contactez-nous</a></li>
-                <div class="bx bx-moon" id="darkmode"></div>
-            </ul>
-        </header>
+    <header>
+        <a href="#" class="logo">Bayɛlɛmabaga</a>
+ 
+        <div class="bx bx-menu" id="menu-icon"></div>
+ 
+        <ul class="navbar">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="Inscription.html">Créer un compte</a></li>
+            <li><a href="Se connecter.html">Se connecter</a></li>
+            <li><a href="#Contactez-nous">Contactez-nous</a></li>
+            <div class="bx bx-moon" id="darkmode"></div>
+        </ul>
+    </header>
  
         <div class="bx bx-menu" id="menu-icon"></div>
  &
