--- a/Inscription.html
+++ b/Inscription.html
@@ -48,10 +48,10 @@
                 <input type="text" class="Inscription-input" placeholder="Email" />
                 </br>
                 </br>
-                <input type="text" class="Inscription-input" placeholder="Mot de passe" />
+                <input type="password" class="Inscription-input" placeholder="Mot de passe" />
                 </br>
                 </br>
-                <input type="text" class="Inscription-input" placeholder="Confirmer le mot de passe" />
+                <input type="password" class="Inscription-input" placeholder="Confirmer le mot de passe" />
                 </br>
                 </br>
                 </div>
