--- a/Se connecter.html
+++ b/Se connecter.html
@@ -42,7 +42,7 @@
             <input type="email" class="Connecter-input" placeholder="Email" />
             </br>
             </br>
-            <input type="text" class="Connecter-input" placeholder="Mot de passe" />
+            <input type="password" class="Connecter-input" placeholder="Mot de passe" />
           </div>
           <h3 class="title"> </br></h3>
           <a href="#" class="btn">SE CONNECTER</a>
